peviewer: Add section/directory/resource hashes, Update directory tab

--- a/tools/peview/peview.rc
+++ b/tools/peview/peview.rc
@@ -153,10 +153,9 @@ BEGIN
 
     IDD_PEPREVIEW, DIALOG
     BEGIN
-        LEFTMARGIN, 2
-        RIGHTMARGIN, 299
-        TOPMARGIN, 2
-        BOTTOMMARGIN, 278
+        LEFTMARGIN, 1
+        RIGHTMARGIN, 300
+        TOPMARGIN, 1
     END
 
     IDD_PEDIRECTORY, DIALOG
@@ -381,7 +380,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Preview"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_PREVIEW,2,2,297,276,ES_MULTILINE | ES_READONLY | WS_VSCROLL | NOT WS_TABSTOP
+    EDITTEXT        IDC_PREVIEW,1,1,299,279,ES_MULTILINE | ES_READONLY | NOT WS_BORDER | WS_VSCROLL | WS_HSCROLL | NOT WS_TABSTOP
 END
 
 IDD_PEDIRECTORY DIALOGEX 0, 0, 300, 280
