--- a/tools/peview/peview.vcxproj.filters
+++ b/tools/peview/peview.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="pedirprp.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="richprp.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\peview.h">
