--- a/tools/peview/peview.rc
+++ b/tools/peview/peview.rc
@@ -161,6 +161,10 @@ BEGIN
     IDD_PEDIRECTORY, DIALOG
     BEGIN
     END
+
+    IDD_PEPRODID, DIALOG
+    BEGIN
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -389,6 +393,18 @@ CAPTION "Directories"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_TABSTOP,0,0,300,280
+END
+
+IDD_PEPRODID DIALOGEX 0, 0, 300, 280
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "ProdId"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_TABSTOP,0,38,300,242
+    LTEXT           "Checksum:",IDC_STATIC,7,7,38,8
+    EDITTEXT        IDC_PRODCHECKSUM,58,7,217,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "Hash:",IDC_STATIC,7,21,38,8
+    EDITTEXT        IDC_PRODHASH,58,21,217,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
 END
 
 
